force-app/main/default/objects/SiebelDocumentActivity__x/SiebelDocumentActivity__x.object-meta.xml
<CustomObject>
    <description>SiebelDocumentActivity</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelDocumentActivity</externalName>
    <label>Attività Documentale Siebel</label>
    <pluralLabel>SiebelDocumentActivity</pluralLabel>
</CustomObject>