force-app/main/default/objects/SiebelDocumentActivity__x/fields/ACTIVITY_UID__c.field-meta.xml
<CustomField>
    <fullName>ACTIVITY_UID__c</fullName>
    <description>ACTIVITY_UID</description>
    <externalDeveloperName>ACTIVITY_UID</externalDeveloperName>
    <label>ACTIVITY_UID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>