force-app/main/default/objects/SiebelDocumentActivity__x/fields/DESC_ALLEGATO__c.field-meta.xml
<CustomField>
    <fullName>DESC_ALLEGATO__c</fullName>
    <description>DESC_ALLEGATO</description>
    <externalDeveloperName>DESC_ALLEGATO</externalDeveloperName>
    <label>Descrizione Allegato</label>
    <length>60</length>
    <type>Text</type>
</CustomField>