force-app/main/default/objects/SiebelDocumentActivity__x/fields/ESITO__c.field-meta.xml
<CustomField>
    <fullName>ESITO__c</fullName>
    <description>ESITO</description>
    <externalDeveloperName>ESITO</externalDeveloperName>
    <label>Esito</label>
    <length>2</length>
    <type>Text</type>
</CustomField>