force-app/main/default/objects/SiebelDocumentActivity__x/fields/ID_ALLEGATO__c.field-meta.xml
<CustomField>
    <fullName>ID_ALLEGATO__c</fullName>
    <description>ID_ALLEGATO</description>
    <externalDeveloperName>ID_ALLEGATO</externalDeveloperName>
    <label>Id Allegato</label>
    <length>30</length>
    <type>Text</type>
</CustomField>