force-app/main/default/objects/SiebelDocumentActivity__x/fields/ID_RDO__c.field-meta.xml
<CustomField>
    <fullName>ID_RDO__c</fullName>
    <description>ID_RDO</description>
    <externalDeveloperName>ID_RDO</externalDeveloperName>
    <label>Id RDO</label>
    <length>15</length>
    <referenceTo>SiebelRdo__x</referenceTo>
    <relationshipLabel>SiebelDocumentActivity</relationshipLabel>
    <relationshipName>SiebelDocumentActivity</relationshipName>
    <type>ExternalLookup</type>
</CustomField>