force-app/main/default/objects/SiebelDocumentActivity__x/fields/NOTE__c.field-meta.xml
<CustomField>
    <fullName>NOTE__c</fullName>
    <description>NOTE</description>
    <externalDeveloperName>NOTE</externalDeveloperName>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>