force-app/main/default/objects/SiebelDocumentActivity__x/fields/RDS_NUM__c.field-meta.xml
<CustomField>
    <fullName>RDS_NUM__c</fullName>
    <description>RDS_NUM</description>
    <externalDeveloperName>RDS_NUM</externalDeveloperName>
    <label>Numero RDS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>