force-app/main/default/objects/SiebelDocumentActivity__x/fields/TESTO_ERRR__c.field-meta.xml
<CustomField>
    <fullName>TESTO_ERRR__c</fullName>
    <description>TESTO_ERRR</description>
    <externalDeveloperName>TESTO_ERRR</externalDeveloperName>
    <label>Testo Errore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>