force-app/main/default/objects/SiebelDocumentActivity__x/fields/VERSION__c.field-meta.xml
<CustomField>
    <fullName>VERSION__c</fullName>
    <description>VERSION</description>
    <externalDeveloperName>VERSION</externalDeveloperName>
    <label>Versione</label>
    <length>2</length>
    <type>Text</type>
</CustomField>