force-app/main/default/objects/SiebelDocumentActivity__x/fields/X_ATTRIB_01__c.field-meta.xml
<CustomField>
    <fullName>X_ATTRIB_01__c</fullName>
    <description>X_ATTRIB_01</description>
    <externalDeveloperName>X_ATTRIB_01</externalDeveloperName>
    <label>X_ATTRIB_01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>